--- a/mobile/code/up_down_vote/app/src/main/res/layout/activity_main.xml
+++ b/mobile/code/up_down_vote/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"></ListView>
 </RelativeLayout>
