--- a/mobile/code/up_down_vote/app/src/main/res/menu/menu_main.xml
+++ b/mobile/code/up_down_vote/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_add" android:title="Add"
-        android:orderInCategory="101" android:showAsAction="always" />
+          android:orderInCategory="101" android:showAsAction="always"/>
+    <item android:id="@+id/switchSyncLayout" android:title=""
+          android:showAsAction="always" android:actionLayout="@layout/switch_sync" />
 </menu>
